debhelper (4.1.38) unstable; urgency=low

UNRE
  * Fixed dh_installcatalog's references to itself on man page.
    Closes: #184411

 -- Joey Hess <joeyh@debian.org>  Thu, 13 Mar 2003 10:51:54 -0500

debhelper (4.1.37) unstable; urgency=low

  * dh_installmenu: Refer to menufile(5) instead of 5L so as not to confuse
    pod2man. Closes: #184013

 -- Joey Hess <joeyh@debian.org>  Sat,  8 Mar 2003 18:37:14 -0500

debhelper (4.1.36) unstable; urgency=low

  * Rename debhelper.1 to debhelper.7.
  * Typo, Closes: #183267

 -- Joey Hess <joeyh@debian.org>  Tue,  4 Mar 2003 14:27:45 -0500

debhelper (4.1.34) unstable; urgency=low

  * Removed vegistal substvars stuff from dh_inistallinit.
  * Update debhelper(1).

 -- Joey Hess <joeyh@debian.org>  Mon, 24 Feb 2003 19:34:44 -0500

debhelper (4.1.33) unstable; urgency=low

  * wiggy didn't take my hint about making update-modules send warnings to
    stderr, so its overly verbose stdout is now directed to /dev/null to
    prevent conflicts with debconf. Closes: #150804
  * dh_fixperms: only skip examples directories which in a parent of
    usr/share/doc, not in a deeper tree. Closes: #152602
  * dh_compress: stop even looking at usr/doc

 -- Joey Hess <joeyh@debian.org>  Sat, 22 Feb 2003 14:45:32 -0500

debhelper (4.1.32) unstable; urgency=low

  * dh_md5sums: note that it's used by debsums. Closes: #181521
  * Make addsubstvars() escape the value of the variable before passing it to
    the shell. Closes: #178524
  * Fixed escape_shell()'s escaping of a few things.

 -- Joey Hess <joeyh@debian.org>  Tue, 18 Feb 2003 19:01:45 -0500

debhelper (4.1.31) unstable; urgency=low

  * Added dh_installcatalogs, for sgml (and later xml) catalogs. By
    Adam DiCarlo. Closes: #90025

 -- Joey Hess <joeyh@debian.org>  Wed, 12 Feb 2003 11:26:24 -0500

debhelper (4.1.30) unstable; urgency=low

  * Turned dh_undocumented into a no-op, as policy does not want
    undocumented.7 links anymore.
