@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Joey Hess <joeyh@debian.org>
 Build-Depends-Indep: perl (>= 5.6.1), coreutils | fileutils (>= 4.0-2.1), file (>= 3.23-1), dpkg-dev (>= 1.9.0)
-Standards-Version: 3.5.8.0
+Standards-Version: 3.5.9.0
 
 Package: debhelper
 Architecture: all
