@@ -1,10 +1,11 @@
 debhelper (4.1.38) unstable; urgency=low
 
-UNRE
   * Fixed dh_installcatalog's references to itself on man page.
     Closes: #184411
+  * dh_installdebconf: Set umask to sane before running po2debconf or
+    debconf-mergetemplates
 
- -- Joey Hess <joeyh@debian.org>  Thu, 13 Mar 2003 10:51:54 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 23 Mar 2003 21:17:09 -0800
 
 debhelper (4.1.37) unstable; urgency=low
 
